fixed thesis pages alignments

--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ html, body {
     font-family: 'Times New Roman';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 18px;
     text-align: center;
 }
